# jj-spr

./: CHANGELOG.md  README.md  flake.nix
.github/workflows/: rust.yml
book/src/: introduction.md
book/src/reference/: commands.md  configuration.md
book/src/user/: setup.md  simple.md
docs/: README.md
docs/reference/: commands.md
docs/user/: commit-message.md  installation.md  setup.md  simple.md  stack.md
spr/: Cargo.toml
spr/src/: config.rs  error.rs  git.rs  github.rs  jj.rs  lib.rs  main.rs  message.rs  output.rs  tree.rs
spr/src/commands/: adopt.rs  amend.rs  close.rs  detach.rs  diff.md  diff.rs  fetch.rs  format.rs  init.rs  list.rs  mod.rs  patch.rs  push.rs  stacked.rs  sync.rs  tests.rs
spr/src/config/: drawing.rs  icons.rs  main.rs  mod.rs  push.rs
spr/src/github/: fakes.rs  mod.rs  real.rs  traits.rs  types.rs
spr/src/github/queries/: mod.rs  mutations.rs  userid.rs
spr/src/gql/: add_assignees.graphql  pullrequest_by_head_query.graphql  request_reviews.graphql  update_issuecomment.graphql
spr/src/testing/: config.rs  git.rs  mod.rs  setup.rs
spr/tests/: minimal_integration_test.rs
