[package]
name = "jj-spr"
version = "1.1.0"
authors = ["Markus Ongyerth", "Lucio Franco"]
description = "Super Pull Requests: Power tool for Jujutsu + GitHub workflows with amend-friendly single PRs and effortless stacked PRs"
repository = "https://github.com/Ongy/jj-spr"
homepage = "https://github.com/Ongy/jj-spr"
license = "MIT"
edition = "2024"
exclude = [".github", ".gitignore"]

[[bin]]
name = "jj-spr"
path = "src/main.rs"

[dependencies]
bytes = "1.11.1"
clap = { version = "^4.5.48", features = ["derive", "wrap_help"] }
console = "^0.16.1"
debug-ignore = "1.0.5"
dialoguer = "^0.12.0"
futures = "^0.3.21"
futures-lite = "^2.6.1"
git2 = { version = "^0.20.2", default-features = false }
git2-ext = "1.0.0"
graphql_client = "^0.16.0"
hexdump = "0.1.2"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
hyper-util = "0.1.20"
indicatif = { version = "0.18.4", features = ["tokio"] }
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
octocrab = { version = "^0.49.5", default-features = false, features = ["rustls", "jwt-rust-crypto", "rustls-ring", "default-client", "tracing"] }
reqwest = { version = "^0.13.2", default-features = false, features = ["json"] }
serde = "^1.0.136"
serde_json = "1.0.149"
textwrap = "0.16.2"
thiserror = "^2.0.17"
tokio = { version = "^1.19.2", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "1.0.6"
tower = "0.5.3"
tower-http = "0.6.10"
tower-layer = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
unicode-normalization = "^0.1.19"

[dev-dependencies]
tempfile = "3.0"
